--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -10,5 +10,5 @@
 <span>
   <%= link_to 'Show', book_path(@book.id) %>
   ｜
-  <%= link_to 'Back', books_path(@book.id) %>
+  <%= link_to 'Back', books_path %>
 </span>
