--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,5 +12,5 @@
 <span>
   <%= link_to 'Edit', edit_book_path(@book.id) %>
   ｜
-  <%= link_to 'Back', books_path(@book.id) %>
+  <%= link_to 'Back', books_path %>
 </span>
